# Pave

./: CLAUDE.md  CMakeLists.txt  LICENSE  README.md  index.html  package-lock.json  package.json  pave.desktop
aur/: .SRCINFO  PKGBUILD
data/: org.kde.pave.Daemon.xml  org.kde.pave.Events.xml  org.kde.pave.ScriptResult.xml  pave.service
data/kwin-script/: main.js
docs/: keybinds.md  roadmap.md  tab-zone-manager.md  v2-architecture.md
src/: daemon.cpp  daemon.h  main.cpp  main.ts  styles.css  windowmanager.cpp  windowmanager.h  zonelayout.cpp  zonelayout.h
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/kwin-scripts/almostmaximize/: metadata.json
src-tauri/kwin-scripts/almostmaximize/contents/code/: main.js
src-tauri/src/: config.rs  lib.rs  main.rs  presets.rs  tiling.rs  tray.rs  zone_assignments.rs  zone_layout.rs
src-tauri/src/platform/: kwin.rs  mod.rs
