[package]
name = "pave"
version = "0.1.0"
description = "Smart window tiling manager for Linux"
authors = ["eaholum"]
edition = "2021"

[lib]
name = "pave_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zbus = "5"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
dirs = "5"
log = "0.4"
env_logger = "0.11"
futures-lite = "2"
tauri-plugin-localhost = "2.3.2"
